projet_gl/src/test/deca/context/valid/3_17/3_17_2_DeclVal.deca
// Description:
//    Programme déclaration de variable de type float avec Initialization
//
// Resultats:
//    ok
//
// Historique:
//    cree le 18/01/2024

{
        float var = 1.1;
}