projet_gl/src/test/deca/context/invalid/3_17/3_17_1_Decl_Var.deca
// Description:
//    Problème de déclaration de variable de type void
//
// Resultats:
//    Ligne 11: Variable type should not be void.
// 
// Historique:
//    cree le 09/01/2024

{   
   void var1;
}
